# cz-conventional-gitmoji

./: .copier-answers.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bumpversion.yml  pythonpackage.yml  pythonpublish.yml
scripts/: lint.sh  publish.sh  test.sh
src/cz_gitmoji/: __init__.py  main.py
src/gitmojify/: __init__.py  mojify.py
src/shared/: __init__.py  gitmojis.py  model.py  settings.py  spec.py  utils.py
tests/: __init__.py
tests/cz_gitmoji/: __init__.py  conftest.py  test_cz_gitmoji.py
tests/gitmojify/: __init__.py  test_gitmojify.py
